--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "dependencies": {
     "axios": "0.18.0",
-    "bootstrap": "4.1.1",
+    "bootstrap": "^4.6.0",
     "font-awesome": "4.7.0",
     "json-server": "^0.16.3",
-    "react": "^16.4.2",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^16.4.2",
     "react-notifications": "^1.4.3",
     "react-router": "4.2.0",
